--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"noImplicitThis": true,
 		"noUnusedParameters": true,
 		"noUnusedLocals": true,
+		// "strictNullChecks": true,
 		"outDir": "extension"
 	}
 }
