bundle cocoa_impl

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@girs/gnome-shell": "^45.0.0-beta8",
     "@girs/gobject-2.0": "^2.78.0-3.2.7",
     "@girs/meta-13": "^13.0.0-3.2.7",
-    "@girs/shell-13": "^13.0.0-3.2.7"
+    "@girs/shell-13": "^13.0.0-3.2.7",
+    "esbuild": "^0.19.11"
   }
 }
