--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
     "@girs/meta-13": "^13.0.0-3.2.7",
     "@girs/shell-13": "^13.0.0-3.2.7",
     "esbuild": "^0.19.11"
-  }
+  },
+  "version": "0.0.0"
 }
