--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "name": "slinger",
   "type": "module",
   "dependencies": {
+    "@girs/cairo-1.0": "^1.0.0-3.2.7",
     "@girs/clutter-13": "^13.0.0-3.2.7",
     "@girs/gio-2.0": "^2.78.0-3.2.7",
     "@girs/gjs": "^3.2.7",
@@ -11,5 +13,6 @@
     "@girs/shell-13": "^13.0.0-3.2.7",
     "esbuild": "^0.19.11"
   },
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "packageManager": "yarn@4.0.2"
 }
